gcc/testsuite/gcc.dg/noncompile/20000901-1.c
struct foo bar[] = { {"baz"} }; /* { dg-error "have incomplete type|excess elements|near|assumed|storage size" } */
